<resources>
    <string name="app_name">Quiz App</string>
    <string name="quiz_app">Quiz App!</string>
    <string name="welcome">Welcome</string>
    <string name="enter_name">Please enter your name</string>
    <string name="start">START</string>
    <string name="main_question">Which country does this flag belong to?</string>
    <string name="btn_submit">SUBMIT</string>
    <string name="title_activity_result">ResultActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="result">Result</string>
    <string name="trophie_image">trophie image</string>
    <string name="hey_congratulation">Hey, Congratulation</string>
    <string name="ashutosh">Ashutosh</string>
    <string name="score_text">You scored 0 out of 9</string>
    <string name="btn_txt_finish">FINISH</string>
</resources>